# CAEP

./: CMakeLists.txt  LICENSE  README.md  version.mk
src/: CMakeLists.txt
src/caddies/cv/: ximage.h
src/caddies/ext/: trait_test.h  xdll_parser.h
src/caddies/file/: filesystem.h  xfile.cpp  xfile.h
src/caddies/json/: xjson.cpp  xjson.h
src/caddies/log/: logger.h  logger.temp
src/caddies/memory/: xbuffer.h  xbuffer.impl.h
src/caddies/perf/: performance.cpp  performance.h  timer.cpp  timer.h
src/caddies/regex/: xregex.cpp  xregex.h  xregex_test.cpp
src/caddies/threadpool/: xthread_flow.h  xthread_flow.impl.h  xthreadpool.h  xthreadpool.impl.h
src/caddies/util/: argument_parser.cpp  argument_parser.h  argument_parser_test.cpp
src/caep/inc/: caep.h
src/caep/src/: demo_hole.cpp
src/caep/src/origin/: plate_with_a_hole_fail.cpp
src/gpu_helper/: cl_hpp_test.cpp  cl_symbols.cpp  cl_symbols.h  cl_wrapper.h
src/run/: main.cpp
